syntax = "proto2";

option java_multiple_files = true;

message ReferrerInfoClient
{
    enum Source {
        UNKNOWN = 0;
        GP = 1;
        HMS = 2;
    }
    optional string value = 1;
    optional uint64 installBeginTimeSeconds = 2;
    optional uint64 clickTimeSeconds = 3;
    optional Source source = 4 [default = UNKNOWN]; //Referrer source.
}
